remove word-wrap for aesthetic purposes, attempt to correct line length with .split(', ')

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 #result {
   width : 250px;
-  word-wrap : break-word;
+  word-wrap : normal;
   
 }
